preparacion de proyecto para produccion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
 logging.level.org.hibernate.SQL=debug
 spring.jackson.time-zone = America/Havana
 spring.jackson.locale = es_CU
-
+server.port = 8765
 spring.servlet.multipart.max-file-size = 10MB
 spring.servlet.multipart.max-request-size = 10MB
